JDF-430: Part I - Use new pattern for name in POM files. Still need to rename directories and modify sub-module quickstarts